0.6.3/_sources/guides/preferences.md
(napari-preferences)=

# Preferences

Starting with version 0.4.6, napari provides persistent settings.

Settings are managed by getting the global settings object and modifying settings:

```python
from napari.settings import get_settings

settings = get_settings()
# then modify... e.g:
settings.appearance.theme = 'dark'
```

## Reset to defaults via CLI

To reset all napari settings to the default values:

```bash
napari --reset
```

## The preferences dialog

Starting with version 0.4.6, napari provides a preferences dialog to manage
some of the provided options.

### Application

![application](../images/_autogenerated/preferences-application.png)



### Appearance

![appearance](../images/_autogenerated/preferences-appearance.png)



### Plugins

![plugins](../images/_autogenerated/preferences-plugins.png)



### Shortcuts

![shortcuts](../images/_autogenerated/preferences-shortcuts.png)



### Experimental

![experimental](../images/_autogenerated/preferences-experimental.png)



### Reset to defaults via UI

To reset the preferences click on the `Restore defaults` button and continue
by clicking on `Restore`.

![](../images/_autogenerated/preferences-reset.png)

## Sections

The settings are grouped by sections and napari core provides the following:

### APPLICATION

Main application settings.


#### Brush size on mouse move modifiers

*Modifiers to activate changing the brush size by moving the mouse.*

* <small>Access programmatically with `SETTINGS.application.brush_size_on_mouse_move_modifiers`.</small>
* <small>Type: `BrushSizeOnMouseModifiers`.</small>
* <small>Default: `<BrushSizeOnMouseModifiers.ALT: 'Alt'>`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Confirm window or application closing

*Ask for confirmation before closing a napari window or application (all napari windows).*

* <small>Access programmatically with `SETTINGS.application.confirm_close_window`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `True`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Console notification level

*Select the notification level for the console.*

* <small>Access programmatically with `SETTINGS.application.console_notification_level`.</small>
* <small>Type: `NotificationSeverity`.</small>
* <small>Default: `<NotificationSeverity.NONE: 'none'>`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Dask cache

*Settings for dask cache (does not work with distributed arrays)*

* <small>Access programmatically with `SETTINGS.application.dask`.</small>
* <small>Type: `DaskSettings`.</small>
* <small>Default: `DaskSettings(enabled=True, cache=4.193144832)`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Depth Axis Orientation

*Orientation of the depth axis in 3D view.
Default is "Towards"; <0.6.0 was "Away".*

* <small>Access programmatically with `SETTINGS.application.depth_axis_orientation`.</small>
* <small>Type: `DepthAxisOrientation`.</small>
* <small>Default: `<DepthAxisOrientation.TOWARDS: 'towards'>`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### First time

*Indicate if napari is running for the first time. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.first_time`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `True`.</small>

#### Grid Height

*Number of rows in the grid.*

* <small>Access programmatically with `SETTINGS.application.grid_height`.</small>
* <small>Type: `ConstrainedIntValue`.</small>
* <small>Default: `-1`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Grid Spacing

*The amount of spacing inbetween grid viewboxes.
If between 0 and 1, it is interpreted as a proportion of the size of the viewboxes.
If equal or greater than 1, it is interpreted as screen pixels.*

* <small>Access programmatically with `SETTINGS.application.grid_spacing`.</small>
* <small>Type: `ConstrainedFloatValue`.</small>
* <small>Default: `0`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Grid Stride

*Number of layers to place in each grid viewbox before moving on to the next viewbox.
A negative stride will cause the order in which the layers are placed in the grid to be reversed.
0 is not a valid entry.*

* <small>Access programmatically with `SETTINGS.application.grid_stride`.</small>
* <small>Type: `ConstrainedIntValue`.</small>
* <small>Default: `1`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Grid Width

*Number of columns in the grid.*

* <small>Access programmatically with `SETTINGS.application.grid_width`.</small>
* <small>Type: `ConstrainedIntValue`.</small>
* <small>Default: `-1`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### GUI notification level

*Select the notification level for the user interface.*

* <small>Access programmatically with `SETTINGS.application.gui_notification_level`.</small>
* <small>Type: `NotificationSeverity`.</small>
* <small>Default: `<NotificationSeverity.INFO: 'info'>`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Delay to treat button as hold in seconds

*This affects certain actions where a short press and a long press have different behaviors, such as changing the mode of a layer permanently or only during the long press.*

* <small>Access programmatically with `SETTINGS.application.hold_button_delay`.</small>
* <small>Type: `float`.</small>
* <small>Default: `0.5`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Horizontal Axis Orientation

*Orientation of the horizontal axis in 2D and 3D view.
Default is "Right".*

* <small>Access programmatically with `SETTINGS.application.horizontal_axis_orientation`.</small>
* <small>Type: `HorizontalAxisOrientation`.</small>
* <small>Default: `<HorizontalAxisOrientation.RIGHT: 'right'>`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### IPython interactive

*Toggle the use of interactive `%gui qt` event loop when creating napari Viewers in IPython.*

* <small>Access programmatically with `SETTINGS.application.ipy_interactive`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `True`.</small>

#### Language

*Select the display language for the user interface.*

* <small>Access programmatically with `SETTINGS.application.language`.</small>
* <small>Type: `Language`.</small>
* <small>Default: `'en'`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### New labels data type

*data type for labels layers created with the "new labels" button.*

* <small>Access programmatically with `SETTINGS.application.new_labels_dtype`.</small>
* <small>Type: `LabelDTypes`.</small>
* <small>Default: `<LabelDTypes.uint8: 'uint8'>`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Opened folders history

*Last saved list of opened folders. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.open_history`.</small>
* <small>Type: `List[str]`.</small>
* <small>Default: `[]`.</small>

#### Playback frames per second

*Playback speed in frames per second.*

* <small>Access programmatically with `SETTINGS.application.playback_fps`.</small>
* <small>Type: `int`.</small>
* <small>Default: `10`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Playback loop mode

*Loop mode for playback.*

* <small>Access programmatically with `SETTINGS.application.playback_mode`.</small>
* <small>Type: `LoopMode`.</small>
* <small>Default: `<LoopMode.LOOP: 'loop'>`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Plugin widget positions

*Per-widget last saved position of plugin dock widgets. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.plugin_widget_positions`.</small>
* <small>Type: `Mapping[str, str]`.</small>
* <small>Default: `{}`.</small>

#### Preferences size

*Last saved width and height for the preferences dialog. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.preferences_size`.</small>
* <small>Type: `Optional[Tuple[int, int]]`.</small>
* <small>Default: `None`.</small>

#### Saved folders history

*Last saved list of saved folders. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.save_history`.</small>
* <small>Type: `List[str]`.</small>
* <small>Default: `[]`.</small>

#### Save window geometry

*Toggle saving the main window size and position.*

* <small>Access programmatically with `SETTINGS.application.save_window_geometry`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `True`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Save window state

*Toggle saving the main window state of widgets.*

* <small>Access programmatically with `SETTINGS.application.save_window_state`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `False`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Vertical Axis Orientation

*Orientation of the vertical axis in 2D and 3D view.
Default is "Down".*

* <small>Access programmatically with `SETTINGS.application.vertical_axis_orientation`.</small>
* <small>Type: `VerticalAxisOrientation`.</small>
* <small>Default: `<VerticalAxisOrientation.DOWN: 'down'>`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Window fullscreen

*Last saved fullscreen state for the main window. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.window_fullscreen`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `False`.</small>

#### Window maximized state

*Last saved maximized state for the main window. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.window_maximized`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `False`.</small>

#### Window position

*Last saved x and y coordinates for the main window. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.window_position`.</small>
* <small>Type: `Optional[Tuple[int, int]]`.</small>
* <small>Default: `None`.</small>

#### Window size

*Last saved width and height for the main window. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.window_size`.</small>
* <small>Type: `Optional[Tuple[int, int]]`.</small>
* <small>Default: `None`.</small>

#### Window state

*Last saved state of dockwidgets and toolbars for the main window. This setting is managed by the application.*

* <small>Access programmatically with `SETTINGS.application.window_state`.</small>
* <small>Type: `Optional[str]`.</small>
* <small>Default: `None`.</small>

#### Show status bar

*Toggle diplaying the status bar for the main window.*

* <small>Access programmatically with `SETTINGS.application.window_statusbar`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `True`.</small>


### APPEARANCE

User interface appearance settings.


#### Font size

*Select the user interface font size.*

* <small>Access programmatically with `SETTINGS.appearance.font_size`.</small>
* <small>Type: `ConstrainedIntValue`.</small>
* <small>Default: `9`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Highlight

*Select the highlight color and thickness to use when hovering over shapes/points.*

* <small>Access programmatically with `SETTINGS.appearance.highlight`.</small>
* <small>Type: `HighlightSettings`.</small>
* <small>Default: `HighlightSettings(highlight_thickness=1, highlight_color=[0.0, 0.6, 1.0, 1.0])`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Show layer tooltips

*Toggle to display a tooltip on mouse hover.*

* <small>Access programmatically with `SETTINGS.appearance.layer_tooltip_visibility`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `False`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Theme

*Select the user interface theme.*

* <small>Access programmatically with `SETTINGS.appearance.theme`.</small>
* <small>Type: `Theme`.</small>
* <small>Default: `'dark'`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Update status based on layer

*Calculate status bar based on current active layer and mouse position.*

* <small>Access programmatically with `SETTINGS.appearance.update_status_based_on_layer`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `True`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>

### PLUGINS

Plugins settings.


#### Shimmed plugins already warned

*Set of installed shimmed plugins that have already been warned about.*

* <small>Access programmatically with `SETTINGS.plugins.already_warned_shimmed_plugins`.</small>
* <small>Type: `Set[str]`.</small>
* <small>Default: `set()`.</small>

#### Plugin sort order

*Sort plugins for each action in the order to be called.*

* <small>Access programmatically with `SETTINGS.plugins.call_order`.</small>
* <small>Type: `Mapping[str, list[napari.settings._plugins.PluginHookOption]]`.</small>
* <small>Default: `{}`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Disabled plugins

*Plugins to disable on application start.*

* <small>Access programmatically with `SETTINGS.plugins.disabled_plugins`.</small>
* <small>Type: `Set[str]`.</small>
* <small>Default: `set()`.</small>

#### File extension readers

*Assign file extensions to specific reader plugins*

* <small>Access programmatically with `SETTINGS.plugins.extension2reader`.</small>
* <small>Type: `Mapping[str, str]`.</small>
* <small>Default: `{}`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Writer plugin extension association.

*Assign file extensions to specific writer plugins*

* <small>Access programmatically with `SETTINGS.plugins.extension2writer`.</small>
* <small>Type: `Mapping[str, str]`.</small>
* <small>Default: `{}`.</small>

#### Only warn for new adapted plugins

*Only warn about newly installed adapted plugins. Leave unchecked to receive warning with each startup.*

* <small>Access programmatically with `SETTINGS.plugins.only_new_shimmed_plugins_warning`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `False`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Use npe2 adaptor

*Use npe2-adaptor for first generation plugins.
When an npe1 plugin is found, this option will
import its contributions and create/cache
a 'shim' npe2 manifest that allows it to be treated
like an npe2 plugin (with delayed imports, etc...)*

* <small>Access programmatically with `SETTINGS.plugins.use_npe2_adaptor`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `True`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>

### SHORTCUTS

Shortcut settings.


#### shortcuts

*Set keyboard shortcuts for actions.*

* <small>Access programmatically with `SETTINGS.shortcuts.shortcuts`.</small>
* <small>Type: `Mapping[str, list[app_model.types._keys._keybindings.KeyBinding]]`.</small>
* <small>Default: `{'napari:toggle_console_visibility': [<KeyBinding at 0x7f85d3ae88b0: Ctrl+Shift+C>], 'napari:toggle_ndisplay': [<KeyBinding at 0x7f85d3ac26b0: Ctrl+Y>], 'napari:toggle_theme': [<KeyBinding at 0x7f85d3ac2d70: Ctrl+Shift+T>], 'napari:reset_view': [<KeyBinding at 0x7f85d3ac2680: Ctrl+R>], 'napari:delete_selected_layers': [<KeyBinding at 0x7f85d3ac2e90: Ctrl+Delete>, <KeyBinding at 0x7f85d3ac27a0: Ctrl+Backspace>], 'napari:show_shortcuts': [<KeyBinding at 0x7f85d3ac30d0: Ctrl+Alt+/>], 'napari:increment_dims_left': [<KeyBinding at 0x7f85d3ac2b90: Left>], 'napari:increment_dims_right': [<KeyBinding at 0x7f85d3ac2c80: Right>], 'napari:focus_axes_up': [<KeyBinding at 0x7f85d3ac2b00: Alt+Up>], 'napari:focus_axes_down': [<KeyBinding at 0x7f85d3ac3430: Alt+Down>], 'napari:roll_axes': [<KeyBinding at 0x7f85d3ac2ef0: Ctrl+E>], 'napari:transpose_axes': [<KeyBinding at 0x7f85d3ac2fe0: Ctrl+T>], 'napari:rotate_layers': [<KeyBinding at 0x7f85d3ac3670: Ctrl+Alt+T>], 'napari:toggle_grid': [<KeyBinding at 0x7f85d3ac3100: Ctrl+G>], 'napari:toggle_selected_visibility': [<KeyBinding at 0x7f85d3ac2f80: V>], 'napari:toggle_unselected_visibility': [<KeyBinding at 0x7f85d3ac38b0: Shift+V>], 'napari:select_layer_above': [<KeyBinding at 0x7f85d3ac3340: Ctrl+Up>], 'napari:select_layer_below': [<KeyBinding at 0x7f85d3ac39d0: Ctrl+Down>], 'napari:show_only_layer_above': [<KeyBinding at 0x7f85d3ac3460: Shift+Alt+Up>], 'napari:show_only_layer_below': [<KeyBinding at 0x7f85d3ac3af0: Shift+Alt+Down>], 'napari:hold_for_pan_zoom': [<KeyBinding at 0x7f85d3ac3580: Space>], 'napari:activate_labels_erase_mode': [<KeyBinding at 0x7f85d3ac3400: 1>, <KeyBinding at 0x7f85d3ac3d30: E>], 'napari:activate_labels_paint_mode': [<KeyBinding at 0x7f85d3ac37c0: 2>, <KeyBinding at 0x7f85d3ac3640: P>], 'napari:activate_labels_polygon_mode': [<KeyBinding at 0x7f85d3ac3eb0: 3>], 'napari:activate_labels_fill_mode': [<KeyBinding at 0x7f85d3ac3a30: 4>, <KeyBinding at 0x7f85d3ac3b20: F>], 'napari:activate_labels_picker_mode': [<KeyBinding at 0x7f85d3ac3a90: 5>, <KeyBinding at 0x7f85d3ac3df0: L>], 'napari:activate_labels_pan_zoom_mode': [<KeyBinding at 0x7f85d3ac3ca0: 6>, <KeyBinding at 0x7f85d3ac3f40: Z>], 'napari:activate_labels_transform_mode': [<KeyBinding at 0x7f85d3ac3f70: 7>], 'napari:new_label': [<KeyBinding at 0x7f85d3af41c0: M>], 'napari:swap_selected_and_background_labels': [<KeyBinding at 0x7f85d3af4250: X>], 'napari:decrease_label_id': [<KeyBinding at 0x7f85d3af42e0: ->], 'napari:increase_label_id': [<KeyBinding at 0x7f85d3af4370: =>], 'napari:decrease_brush_size': [<KeyBinding at 0x7f85d3af4400: [>], 'napari:increase_brush_size': [<KeyBinding at 0x7f85d3af4490: ]>], 'napari:toggle_preserve_labels': [<KeyBinding at 0x7f85d3af4520: B>], 'napari:reset_polygon': [<KeyBinding at 0x7f85d3af45b0: Escape>], 'napari:complete_polygon': [<KeyBinding at 0x7f85d3af4640: Enter>], 'napari:activate_points_add_mode': [<KeyBinding at 0x7f85d3af46d0: 2>, <KeyBinding at 0x7f85d3af4730: P>], 'napari:activate_points_select_mode': [<KeyBinding at 0x7f85d3af4790: 3>, <KeyBinding at 0x7f85d3af47f0: S>], 'napari:activate_points_pan_zoom_mode': [<KeyBinding at 0x7f85d3af4880: 4>, <KeyBinding at 0x7f85d3af48e0: Z>], 'napari:activate_points_transform_mode': [<KeyBinding at 0x7f85d3af4940: 5>], 'napari:select_all_in_slice': [<KeyBinding at 0x7f85d3af49a0: A>, <KeyBinding at 0x7f85d3af4a30: Ctrl+A>], 'napari:select_all_data': [<KeyBinding at 0x7f85d3af4a90: Shift+A>], 'napari:delete_selected_points': [<KeyBinding at 0x7f85d3af4af0: 1>, <KeyBinding at 0x7f85d3af4b50: Delete>, <KeyBinding at 0x7f85d3af4bb0: Backspace>], 'napari:activate_add_rectangle_mode': [<KeyBinding at 0x7f85d3af4c10: R>], 'napari:activate_add_ellipse_mode': [<KeyBinding at 0x7f85d3af4c70: E>], 'napari:activate_add_line_mode': [<KeyBinding at 0x7f85d3af4cd0: L>], 'napari:activate_add_path_mode': [<KeyBinding at 0x7f85d3af4d30: T>], 'napari:activate_add_polyline_mode': [<KeyBinding at 0x7f85d3af4d90: Shift+L>], 'napari:activate_add_polygon_mode': [<KeyBinding at 0x7f85d3af4df0: P>], 'napari:activate_add_polygon_lasso_mode': [<KeyBinding at 0x7f85d3af4e50: Shift+P>], 'napari:activate_direct_mode': [<KeyBinding at 0x7f85d3af4eb0: 4>, <KeyBinding at 0x7f85d3af4f10: D>], 'napari:activate_select_mode': [<KeyBinding at 0x7f85d3af4fa0: 5>, <KeyBinding at 0x7f85d3af5000: S>], 'napari:activate_shapes_pan_zoom_mode': [<KeyBinding at 0x7f85d3af5060: 6>, <KeyBinding at 0x7f85d3af50c0: Z>], 'napari:activate_shapes_transform_mode': [<KeyBinding at 0x7f85d3af5120: 7>], 'napari:activate_vertex_insert_mode': [<KeyBinding at 0x7f85d3af5180: 2>, <KeyBinding at 0x7f85d3af51e0: I>], 'napari:activate_vertex_remove_mode': [<KeyBinding at 0x7f85d3af5270: 1>, <KeyBinding at 0x7f85d3af52d0: X>], 'napari:copy_selected_shapes': [<KeyBinding at 0x7f85d3af5330: Ctrl+C>], 'napari:paste_shape': [<KeyBinding at 0x7f85d3af5390: Ctrl+V>], 'napari:move_shapes_selection_to_front': [<KeyBinding at 0x7f85d3af53f0: F>], 'napari:move_shapes_selection_to_back': [<KeyBinding at 0x7f85d3af5450: B>], 'napari:select_all_shapes': [<KeyBinding at 0x7f85d3af54b0: A>, <KeyBinding at 0x7f85d3af5510: Ctrl+A>], 'napari:delete_selected_shapes': [<KeyBinding at 0x7f85d3af5570: 3>, <KeyBinding at 0x7f85d3af55d0: Delete>, <KeyBinding at 0x7f85d3af5630: Backspace>], 'napari:finish_drawing_shape': [<KeyBinding at 0x7f85d3af5690: Enter>, <KeyBinding at 0x7f85d3af56f0: Escape>], 'napari:orient_plane_normal_along_x': [<KeyBinding at 0x7f85d3af5750: X>], 'napari:orient_plane_normal_along_y': [<KeyBinding at 0x7f85d3af57b0: Y>], 'napari:orient_plane_normal_along_z': [<KeyBinding at 0x7f85d3af5810: Z>], 'napari:orient_plane_normal_along_view_direction': [<KeyBinding at 0x7f85d3af5870: O>], 'napari:activate_image_pan_zoom_mode': [<KeyBinding at 0x7f85d3af5900: 1>], 'napari:activate_image_transform_mode': [<KeyBinding at 0x7f85d3af5960: 2>], 'napari:activate_vectors_pan_zoom_mode': [<KeyBinding at 0x7f85d3af59c0: 1>], 'napari:activate_vectors_transform_mode': [<KeyBinding at 0x7f85d3af5a20: 2>], 'napari:activate_tracks_pan_zoom_mode': [<KeyBinding at 0x7f85d3af5a80: 1>], 'napari:activate_tracks_transform_mode': [<KeyBinding at 0x7f85d3af5ae0: 2>], 'napari:activate_surface_pan_zoom_mode': [<KeyBinding at 0x7f85d3af5b40: 1>], 'napari:activate_surface_transform_mode': [<KeyBinding at 0x7f85d3af5ba0: 2>]}`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>

### EXPERIMENTAL

Experimental settings.


#### Render Images Asynchronously

*Asynchronous loading of image data. 
This setting partially loads data while viewing.*

* <small>Access programmatically with `SETTINGS.experimental.async_`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `False`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Enable autoswapping rendering buffers.

*Autoswapping rendering buffers improves quality by reducing tearing artifacts, while sacrificing some performance.*

* <small>Access programmatically with `SETTINGS.experimental.autoswap_buffers`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `False`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Colormap backend to use for Labels layer

*Color mapping backend to use for Labels layer.
'partsegcore' requires the optional 'partsegcore-compiled-backend' package.
'numba' requires the optional 'numba' package.
'pure python' uses only NumPy and Python.
The 'fastest available' backend will select the fastest installed backend.
*

* <small>Access programmatically with `SETTINGS.experimental.colormap_backend`.</small>
* <small>Type: `ColormapBackend`.</small>
* <small>Default: `fastest_available`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Unused option. Use "triangulation backend" instead.

*This option was removed in napari 0.6.0. Use 
"triangulation backend" instead.*

* <small>Access programmatically with `SETTINGS.experimental.compiled_triangulation`.</small>
* <small>Type: `bool`.</small>
* <small>Default: `False`.</small>

#### Double-click Labels polygon completion radius (-1 to always complete)

*Max radius in pixels from first vertex for double-click to complete a polygon; set -1 to always complete.*

* <small>Access programmatically with `SETTINGS.experimental.completion_radius`.</small>
* <small>Type: `int`.</small>
* <small>Default: `-1`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Minimum distance threshold of shapes lasso and path tool

*Value determines how many screen pixels one has to move before another vertex can be added to the polygonor path.*

* <small>Access programmatically with `SETTINGS.experimental.lasso_vertex_distance`.</small>
* <small>Type: `ConstrainedIntValue`.</small>
* <small>Default: `10`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Shapes polygon lasso and path RDP epsilon

*Setting this higher removes more points from polygons or paths. 
Setting this to 0 keeps all vertices of a given polygon or path.*

* <small>Access programmatically with `SETTINGS.experimental.rdp_epsilon`.</small>
* <small>Type: `ConstrainedFloatValue`.</small>
* <small>Default: `0.5`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>
#### Triangulation backend to use for Shapes layer

*Triangulation backend to use for Shapes layer.
The 'bermuda' requires the optional 'bermuda' package.
The 'partsegcore' requires the optional 'partsegcore-compiled-backend' package.
The 'triangle' requires the optional 'triangle' package.
The 'numba' backend requires the optional 'numba' package.
The 'pure python' backend uses the default Python triangulation from vispy.
The 'fastest available' backend will select the fastest available backend.
*

* <small>Access programmatically with `SETTINGS.experimental.triangulation_backend`.</small>
* <small>Type: `TriangulationBackend`.</small>
* <small>Default: `fastest_available`.</small>
* <small>UI: This setting can be configured via the preferences dialog.</small>

**Support for plugin specific settings will be provided in an upcoming release.**
